2007-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinRegistry.cs, Mono.Addins.Database/SetupProcess.cs,
	  Mono.Addins.Database/AddinScanResult.cs,
	  Mono.Addins.Database/AddinDatabase.cs,
	  Mono.Addins.Database/ProcessProgressStatus.cs,
	  Mono.Addins.Database/AddinScanner.cs: Before scanning a file, log
	  the file name. If for some reason the scanner process crashes, the
	  main process will know the name of the file that made it crash and
	  will restart the scan adding it to the ignore file list.

2007-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.mdp, Makefile.am: Added new file.
	* Mono.Addins/RuntimeAddin.cs, Mono.Addins/Addin.cs,
	  Mono.Addins/IProgressStatus.cs,
	  Mono.Addins/ConsoleProgressStatus.cs,
	  Mono.Addins.Database/SetupProcess.cs,
	  Mono.Addins.Database/AddinDatabase.cs,
	  Mono.Addins.Database/FileDatabase.cs,
	  Mono.Addins.Database/ProcessProgressStatus.cs,
	  Mono.Addins.Database/AddinScanner.cs: Added support for add-in
	  private data: a directory where every add-in can store its own
	  private data. IProgressStatus now has a LogLevel property instead
	  of VerboseLog.
	* Mono.Addins/IAddinInstaller.cs, Mono.Addins/AddinManager.cs:
	  Implemented CheckInstalled. This method checks if the specified
	  add-ins are installed. If some of the add-ins are not installed, it
	  will use the installer assigned to the DefaultAddinInstaller
	  property to install them.

2007-06-28  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/Util.cs: Added helper method for getting the
	  path of an assembly in the gac.
	* Mono.Addins.Database/AddinScanner.cs: Added support for GacAssembly
	  in .addins files (scans assemblies installed in the gac). Also,
	  when registering assemblies included in an add-in, make sure to use
	  the a path relative to the add-in location (the assembly may have
	  been loaded from a different location).

2007-06-26  Lluis Sanchez Gual <lluis@novell.com> 
